grid text/label cell no longer truncates

--- a/static/survey/styles/main.css
+++ b/static/survey/styles/main.css
@@ -115,6 +115,9 @@ select + input {
 .ngHeaderText {
     white-space: normal;
 }
+.ngCellText {
+    white-space: normal;
+}
 
 p.landing, p.info {
     margin-top: 30px;
